# src/routes/auth.routes.ts
@@ -1,7 +1,8 @@
 import { Router } from "express";
-import { register } from "../controllers/auth.controller";
+import { login, register } from "../controllers/auth.controller";
 
 const authRoutes = Router();
 authRoutes.post("/auth/register", register);
+authRoutes.post("/auth/login", login);
 
 export default authRoutes;
